# agent_payments_protocol

./: .cspell.json  .prettierrc  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  commit.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.cspell/: custom-words.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: docs.yml  linter.yaml  release-please.yml  spellcheck.yaml
cli/: start_merchant_agent.sh  start_shopping_agent.sh  test_merchant_agent.sh
docs/: CNAME  a2a-extension.md  faq.md  glossary.md  index.md  partners.md  roadmap.md  robots.txt  specification.md
docs/stylesheets/: custom.css
samples/python/: README.md  pyproject.toml
samples/python/scenarios/a2a/human-present/cards/: README.md  run.sh
samples/python/scenarios/a2a/human-present/x402/: README.md
samples/python/src/common/: artifact_utils.py  base_server_executor.py  function_call_resolver.py  message_utils.py  server.py  system_utils.py  watch_log.py
samples/python/src/roles/credentials_provider_agent/: __main__.py
samples/python/src/roles/merchant_agent/: __main__.py  agent.json  agent_executor.py  tools.py
samples/python/src/roles/merchant_agent/sub_agents/: catalog_agent.py
samples/python/src/roles/merchant_payment_processor_agent/: __main__.py  agent.json
samples/python/src/roles/shopping_agent/: agent.py  remote_agents.py  tools.py
samples/python/src/roles/shopping_agent/subagents/shopper/: agent.py
scripts/: format.sh
(+36 files in other folders)
